--- a/index.html
+++ b/index.html
@@ -1,42 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
- 	<head>
- 		<meta charset="utf-8">
- 		<title>WFH vs WFO Analysis</title>
- 		<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+
+<head>
+	<meta charset="utf-8">
+	<title>WFH vs WFO Analysis</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link rel="stylesheet" href="styles.css">
- 	</head>
- 	<body>
-      <div class="header">
-			<h1>WFH vs WFO Analysis</h1>
-			<ul>
-				<li>
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="documentation.html">Documentation</a>
-				</li>
-				<li>
-					<a href="video.html">Video</a>
-				</li>
-			</ul>
-      </div>
-      <div class="grid-container">
-		<div class="grid-child">
-			<div class="map" id="map">
-				<h2>Something Is Here</h2>
-				<svg class="chart" id="map-space"></svg>
-         </div>
-      </div>
-         <div class="grid-child">
-		      <div class="timeline" id="timeline">
-				<h2>Something Else Here</h2>
-            <svg class="chart" id="line-chart" font-size="10px"></svg>
+	<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+	<style>
+		
+	</style>
+
+
+
+</head>
+
+<body>
+	<div class="header">
+		<h1>WFH vs WFO Analysis</h1>
+		<ul>
+			<li>
+				<a href="index.html">Visualization</a>
+			</li>
+			<li>
+				<a href="documentation.html">Documentation</a>
+			</li>
+			<li>
+				<a href="video.html">Video</a>
+			</li>
+		</ul>
+	</div>
+	<div class="container-fluid">
+		<!-- Header Section -->
+		<div class="row">
+			<div class="col-lg-5" id="introText">
+				<h2>Intro</h2>
+				</div>
+				<div class="col-lg-7" id="introText">
+					<h2>Visualization 2</h2>
+				</div>
+				</div>
+				<div class="row" >
+					<div class="col-lg-5 px-5"> <body>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+						nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+						esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+						culpa qui officia deserunt mollit anim id est laborum.</body></div>
+						<div class="col-lg-7 d-flex justify-content-center" > <div class="placeholder-1"></div>
+						<!-- <div class="barChart" id="barChart">
+					
+							<svg class="chart" id="bar-chart" font-size="10px"></svg>
+						</div> -->
+				</div>
 			</div>
-      </div>
-   </div>
-		<div class="footer">
-			<p>Created by Matthew Mills, INFO H517</p>
-      </div>
-   
- <script type="text/javascript">
+			<div class="row">
+					<div class="col-lg-7 d-flex justify-content-start" id="introText">
+						<h2 class="vis-2">Visualization 2</h2>
+					</div>
+					</div>
+					<div class="row" >
+		
+							<div class="col-lg-7" > <div class="placeholder-1"></div>
+							<!-- <div class="barChart" id="barChart">
+						
+								<svg class="chart" id="bar-chart" font-size="10px"></svg>
+							</div> -->
+					</div>
+				</div>
+			<div class="col-lg-7">
+				<div class="something" id="something">
+					<h2>Controls</h2>
+					<button type="button" class="btn btn-outline-primary">Primary</button>
+					<button type="button" class="btn btn-outline-secondary">Secondary</button>
+					<button type="button" class="btn btn-outline-success">Success</button>
+					<button type="button" class="btn btn-outline-info">Info</button>
+					<button type="button" class="btn btn-outline-warning">Warning</button>
+					<button type="button" class="btn btn-outline-danger">Danger</button>
+					<button type="button" class="btn btn-outline-dark">Dark</button>
+				</div>
+			</div>
+			<div class="col-lg-7">
+				<div class="something" id="something">
+					<h2>Controls2</h2>
+					<button type="button" class="btn btn-outline-primary">Primary</button>
+					<button type="button" class="btn btn-outline-secondary">Secondary</button>
+					<button type="button" class="btn btn-outline-success">Success</button>
+					<button type="button" class="btn btn-outline-info">Info</button>
+					<button type="button" class="btn btn-outline-warning">Warning</button>
+					<button type="button" class="btn btn-outline-danger">Danger</button>
+					<button type="button" class="btn btn-outline-dark">Dark</button>
+				</div>
+			</div>
+			<div class="container-fluid">
+
+			</div>
+		</div>
+	</div>
+
+	</div>
+	</div>
+
+	<div class="footer">
+		<p>Created by Matthew Mills, INFO H517</p>
+	</div>
+
+	<script type="text/javascript">
